--- a/Fintech_sample1_ver1.5/app/src/main/res/layout/tab2_fragment.xml
+++ b/Fintech_sample1_ver1.5/app/src/main/res/layout/tab2_fragment.xml
@@ -29,8 +29,8 @@
 
         <com.github.mikephil.charting.charts.BarChart
             android:id="@+id/barChart"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
 
     </LinearLayout>
